h1. CHANGELOG

h2. 1.1.8 March 5, 2012

* improve 'html5' recipe to download files for complex application layout and css for Twitter Bootstrap
* update gem 'mongoid' from 2.4.4 to 2.4.6

h2. 1.1.7 March 4, 2012

* improve 'home_page' recipe to show how to set a home page for Devise authenticated users
* improve 'devise' recipe for Devise 'confirmable' option
* improve 'cleanup' recipe to remove commented lines from config/routes.rb
* improve 'html5' recipe to allow choice of bootstrap_less or bootstrap_sass (contributed by gmgp)
* remove 'css_setup' recipe (consolidated with 'html5' recipe)
* add 'inherited_resources' recipe (contributed by gmgp)
* add 'simple_form' recipe (contributed by gmgp)

h2. 1.1.6 February 28, 2012

* update 'devise' recipe to accommmodate RSpec and Cucumber for Devise 'confirmable' option

h2. 1.1.5 February 26, 2012

* update 'action_mailer' recipe to configure test environment
* update 'action_mailer' recipe to configure ActionMailer to send email using a GMail account
* update 'devise' recipe with 'confirmable' and 'invitable' options (with a Cucumber scenario)
* change prompt for 'guard' recipe
* update 'seed_database' recipe to add 'rake db:test:prepare'
* remove 'add_user_name' recipe (replaced by 'add_user' recipe)
* update 'cucumber' recipe to run single features without adding "--require features" to the command line
* add 'slim' recipe (contributed by claudiob)

h2. 1.1.4 February 21, 2012

* add a 'bundle update' after 'bundle install'
* fix 'email_spec' configuration in 'rspec' recipe
* fix typo for machinist in 'rspec' recipe
* avoid deprecation warning with Devise 2.0 for old 'devise/shared/_links.erb' partial

h2. 1.1.3 February 21, 2012

* add 'email_spec' gem to 'rspec' recipe
* update gem 'cucumber-rails' from 1.2.1 to 1.3.0
* update gem 'factory_girl_rails' from 1.6.0 to 1.7.0
* update gem 'devise' from 2.0.0 to 2.0.4
* update gem 'mongoid' from 2.4.3 to 2.4.4
* update gem 'bson_ext' from 1.3.1 to 1.5.2