@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.1.8"
+  VERSION = "1.2.0"
 end
